--- a/param/dwa_local_planner_params_waffle.yaml
+++ b/param/dwa_local_planner_params_waffle.yaml
@@ -2,7 +2,8 @@ DWAPlannerROS:
 
 # Robot Configuration Parameters
   max_vel_x: 0.26
-  min_vel_x: -0.26
+  # min_vel_x: -0.26
+  min_vel_x: -0.10
 
   max_vel_y: 0.0
   min_vel_y: 0.0
@@ -16,11 +17,13 @@ DWAPlannerROS:
 
   acc_lim_x: 2.5
   acc_lim_y: 0.0
-  acc_lim_theta: 3.2 
+  acc_lim_theta: 3.2
 
 # Goal Tolerance Parametes
-  xy_goal_tolerance: 0.05
-  yaw_goal_tolerance: 0.17
+  # xy_goal_tolerance: 0.05
+  xy_goal_tolerance: 0.15
+  # yaw_goal_tolerance: 0.17
+  yaw_goal_tolerance: 0.34
   latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
