--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,8 @@
   <!--   Note that this is equivalent to the following: -->
     <build_depend>rospy</build_depend>
     <exec_depend>rospy</exec_depend>
+    <build_depend>gazebo_ros</build_depend>
+    <exec_depend>gazebo_ros</exec_depend>
   <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>message_generation</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
