--- a/map/L8401.yaml
+++ b/map/L8401.yaml
@@ -1,6 +1,6 @@
-image: map.pgm
+image: L8401.pgm
 resolution: 0.050000
-origin: [-10.000000, -10.000000, 0.000000]
+origin: [0.000000, 0.000000, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
