--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -19,8 +19,8 @@ TrajectoryPlannerROS:
   yaw_goal_tolerance: 0.20
 
 # Differential-drive robot configuration
-  # holonomic_robot: false
-  holonomic_robot: true
+  holonomic_robot: false
+  # holonomic_robot: true
 
 # Forward Simulation Parameters
   sim_time: 0.8
