--- a/param/dwa_local_planner_params_waffle.yaml
+++ b/param/dwa_local_planner_params_waffle.yaml
@@ -34,12 +34,12 @@ DWAPlannerROS:
   controller_frequency: 10.0
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 32.0
-  goal_distance_bias: 20.0
-  occdist_scale: 0.02
+  path_distance_bias: 40.0 #32.0
+  goal_distance_bias: 10.0 #20.0
+  occdist_scale: 0.5 #0.02
   forward_point_distance: 0.325
   stop_time_buffer: 0.2
-  scaling_speed: 0.25
+  scaling_speed: 0.9 #0.25
   max_scaling_factor: 0.2
 
 # Oscillation Prevention Parameters
