--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -1,7 +1,7 @@
 TrajectoryPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 0.18
+  max_vel_x: 1.0 # 0.18
   min_vel_x: 0.08
 
   max_vel_theta:  1.0
@@ -13,17 +13,14 @@ TrajectoryPlannerROS:
   acc_lim_theta: 0.6
 
 # Goal Tolerance Parameters
-  # xy_goal_tolerance: 0.10
-  xy_goal_tolerance: 0.60
-  # yaw_goal_tolerance: 0.05
-  yaw_goal_tolerance: 0.20
+  xy_goal_tolerance: 0.60 # 0.10
+  yaw_goal_tolerance: 0.20 # 0.05
 
 # Differential-drive robot configuration
-  holonomic_robot: false
-  # holonomic_robot: true
+  holonomic_robot: false # true
 
 # Forward Simulation Parameters
   sim_time: 0.8
-  vx_samples: 18
-  vtheta_samples: 20
+  vx_samples: 41 # 18
+  vtheta_samples: 41 # 20
   sim_granularity: 0.05
