--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -14,7 +14,7 @@ TebLocalPlannerROS:
  max_vel_x: 0.6
  max_vel_x_backwards: 0.2
  max_vel_theta: 0.9 #0.3
- acc_lim_x: 0.5
+ acc_lim_x: 0.1
  acc_lim_theta: 0.5
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
@@ -30,8 +30,8 @@ TebLocalPlannerROS:
 
  # GoalTolerance
  xy_goal_tolerance: 0.4 #0.2
- yaw_goal_tolerance: 1.57 #0.1
- free_goal_vel: True #False
+ yaw_goal_tolerance: 0.5 #0.1
+ free_goal_vel: False
 
  # Obstacles
  min_obstacle_dist: 0.1 #0.4
