--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -29,9 +29,9 @@ TebLocalPlannerROS:
    vertices: [[-0.205, -0.155], [-0.205, 0.155], [0.077, 0.155], [0.077, -0.155]] #[ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
 
  # GoalTolerance
- xy_goal_tolerance: 0.4 #0.2
- yaw_goal_tolerance: 0.5 #0.1
- free_goal_vel: False
+ xy_goal_tolerance: 0.3 #0.2
+ yaw_goal_tolerance: 1.0 #0.1
+ free_goal_vel: True
 
  # Obstacles
  min_obstacle_dist: 0.1 #0.4
