--- a/map/L81_gazebo.yaml
+++ b/map/L81_gazebo.yaml
@@ -1,6 +1,6 @@
-image: L8401.pgm
+image: L81_gazebo.pgm
 resolution: 0.050000
-origin: [0.000000, 0.000000, 0.000000]
+origin: [-48.300000, -49.000000, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
