--- a/map/L8401-L8421_20171113.yaml
+++ b/map/L8401-L8421_20171113.yaml
@@ -1,6 +1,6 @@
-image: L84.pgm
+image: L8401-L8421_20171113.pgm
 resolution: 0.050000
-origin: [-3.707217, -14.279832, 0.000000]
+origin: [-2.793464, -11.971611, 0.000000]
 negate: 0
 occupied_thresh: 0.650000
 free_thresh: 0.196000
